--- a/semi_supervised_learning_.ipynb
+++ b/semi_supervised_learning_.ipynb
@@ -199,7 +199,7 @@
         "id": "UP0q9uk5jtZp"
       },
       "source": [
-        "###Baseline Logistic"
+        "###Baseline SVC"
       ]
     },
     {
@@ -270,7 +270,7 @@
         "id": "bpveTlHOnx99"
       },
       "source": [
-        "###Logistic with random 2000 data point"
+        "###SVC with random 2000 data point"
       ]
     },
     {
@@ -345,7 +345,7 @@
         "id": "123rXEUQj2Xg"
       },
       "source": [
-        "###Logistic after preprocessing with 40% of original data points which are images nearest to centroids"
+        "###SVC after preprocessing with 40% of original data points which are images nearest to centroids"
       ]
     },
     {
@@ -392,7 +392,7 @@
         "id": "32zLktMikQz1"
       },
       "source": [
-        "###Logistic after propagating cluster label to every point in that particular cluster"
+        "###SVC after propagating cluster label to every point in that particular cluster"
       ]
     },
     {
@@ -426,7 +426,7 @@
         "id": "o1ZTjzAvlh5y"
       },
       "source": [
-        "###Logistic after propagating representative images to nearest 20% of the points to the centroids\n",
+        "###SVC after propagating representative images to nearest 20% of the points to the centroids\n",
         "\n",
         "\n"
       ]
